# kaggle_petfinder

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml  script_template.py  setup.py
.github/workflows/: upload.yml
kaggle_petfinder/: main.py  utils.py
